<resources>
    <string name="app_name">Control XMEGA</string>
    <string name="MainTitle">Control XMEGA</string>
    <string name="TOP_text">Ekran startowy</string>
    <string name="Connect_text">Panel Bluetooth </string>
    <string name="LED_text">Diody LED</string>
    <string name="LCD_text">Wyświetlacz LCD</string>
    <string name="SEG_text">Wyświetlacz 7-segmentowy</string>
    <string name="DIP_text">Przełącznik DIP</string>
    <string name="POT_text">Potencjometry</string>
    <string name="BUT_text">Przyciski</string>
    <string name="OnBluetooth">Bluetooth ON</string>
    <string name="OffBluetooth">Bluetooth OFF</string>
    <string name="ShowPairedDevices">Pokaż sparowane \n urządzenia</string>
    <string name="DiscoverNewDevices">Wyszukaj \n urządzenia </string>
    <string name="SendSegment"> Wyślij znak</string>
    <string name="ClearSegment">Wyłącz</string>
    <string name="AllLedOn">Włącz wszystkie LEDy</string>
    <string name="AllLedOff">Wyłącz wszystkie LEDy</string>
    <string name="SendLed">Wyślij LED</string>
    <string name="SendLcdText">Wyślij tekst</string>
    <string name="ClearLcd">Wyczyść LCD</string>
    <string name="ButtonSW0">Przycisk SW0</string>
    <string name="ButtonSW1">Przycisk SW1</string>
    <string name="ButtonSW2">Przycisk SW2</string>
    <string name="ButtonSW3">Przycisk SW3</string>
    <string name="Potentiometr1">Potencjometr 1:</string>
    <string name="Potentiometr2">Potencjometr 2:</string>
    <string name="HexValue">Wartość Hex:</string>
    <string name="BinValue">Wartość Bin:</string>
    <string name="MeasurePotentiometr1">Zmierz Potencjometr 1</string>
    <string name="MeasurePotentiometr2">Zmierz Potencjometr 2</string>
    <string name="ReadDipSwitch"> Odczytaj stan przełącznika</string>
    <string name="DipSwitchStatus"> Stan przełącznika:</string>
    <string name="ClearField">Wyczyść pole tekstowe</string>
    <string name="hint_message">Wpisz tekst</string>
    <string name="Status">Status:</string>
    <string name="TextBegin">Przewiń\naby zacząć\n</string>
    <string name="ConnectHint"> Nawiąż połączenie</string>
    <string name="LedHint"> Włącz LEDy lub wyślij bajt</string>
    <string name="LcdHint"> Wpisz i wyślij tekst</string>
    <string name="SegHint"> Wybierz i wyślij znak</string>
    <string name="ButHint"> Wciśnij przycisk na płytce</string>
    <string name="scrollText">Przewiń</string>
</resources>
