<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBackgroundColor"
    tools:context="com.example.dominik.xmegacontrol.LCDFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textAlignment="center"
        android:textColor="@color/TitleColor"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/TitleTextview"
        android:textStyle="bold"
        android:background="@color/TitleBackgroundColor"
        android:text="@string/LCD_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitleTextview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0sp"
        android:layout_marginTop="30sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/Status"
            android:textAlignment="center"
            android:textColor="@color/DarkColor"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/LcdStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:maxLines="1"
            android:textColor="@color/DarkColor"
            android:textSize="20sp"
            android:hint="@string/LcdHint"
            android:textStyle="normal" />
    </LinearLayout>
    <EditText
        android:id="@+id/LcdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="160sp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:hint="@string/hint_message"
        android:maxLength="32" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_alignTop="@+id/TitleTextview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0sp"
        android:layout_marginTop="320sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ClearLcd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonColor"
            android:textStyle="bold"
            android:text="@string/ClearLcd" />
        <Button
            android:id="@+id/CleanLcdText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/ButtonColor"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/ClearField" />
    </LinearLayout>
    <Button
        android:id="@+id/SendLcdText"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginStart="0sp"
        android:layout_marginTop="220sp"
        android:backgroundTint="@color/ButtonColor"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/SendLcdText" />
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="460sp"
        android:layout_alignParentLeft="true"
        android:src="@drawable/arrow2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500sp"
        android:text="@string/scrollText"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="460sp"
        android:layout_alignParentRight="true"
        android:src="@drawable/arrow" />
</RelativeLayout>
