<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AppBackgroundColor"
    tools:context="com.example.dominik.xmegacontrol.LEDFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:textAlignment="center"
        android:textColor="@color/TitleColor"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@color/TitleBackgroundColor"
        android:id="@+id/TitleTextview"
        android:text="@string/LED_text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitleTextview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0sp"
        android:layout_marginTop="30sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center"
            android:text="@string/Status"
            android:textAlignment="center"
            android:textColor="@color/DarkColor"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/LedStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:maxLines="1"
            android:textColor="@color/DarkColor"
            android:textSize="20sp"
            android:hint="@string/LedHint"
            android:textStyle="normal" />
    </LinearLayout>
        <EditText
            android:id="@+id/CharToSend"
            android:layout_width="60sp"
            android:layout_height="80sp"
            android:layout_marginStart="0sp"
            android:layout_marginTop="135sp"
            android:layout_centerHorizontal="true"
            android:textSize="35sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@drawable/frame"
            android:maxLength="1" />
        <Button
            android:id="@+id/SendLED"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginStart="0sp"
            android:layout_marginTop="220sp"
            android:backgroundTint="@color/ButtonColor"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/SendLed" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_alignTop="@+id/TitleTextview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0sp"
        android:layout_marginTop="320sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/LedOFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonColor"
            android:textStyle="bold"
            android:text="@string/AllLedOff" />
        <Button
            android:id="@+id/LedON"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/ButtonColor"
            android:textStyle="bold"
            android:text="@string/AllLedOn" />
    </LinearLayout>
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="460sp"
        android:layout_alignParentLeft="true"
        android:src="@drawable/arrow2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500sp"
        android:text="@string/scrollText"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="460sp"
        android:layout_alignParentRight="true"
        android:src="@drawable/arrow" />
</RelativeLayout>
